# nefu_reviews

./: .env.dist  README.md  bot_migrate.sh  docker-compose.yml
src/bot/: .dockerignore  Dockerfile  main.py  pyproject.toml
src/bot/app/: main.py
src/bot/app/core/: config.py  loader.py
src/bot/app/database/: database.py
src/bot/app/database/models/: __init__.py  base.py  review.py  user.py
src/bot/app/handlers/: __init__.py  menu.py  registration.py  review.py
src/bot/app/handlers/states/: menu.py  registration.py  review.py
src/bot/app/keyboards/: default_commands.py
src/bot/app/keyboards/reply/: menu.py  review.py
src/bot/app/middlewares/: __init__.py  auth.py  database.py  logging.py
src/bot/app/services/: users.py
src/bot/app/utils/: command.py
src/bot/migrations/: env.py
src/bot/migrations/versions/: 2024-04-10_change_id_of_review.py  2024-04-10_delete_telegram_id_field_from_users_.py  2024-04-10_создание_таблицы_пользователей_и_отзывов.py  2024-04-11_change_id_to_authoincrement.py  2024-04-11_init.py
src/reviews_hub/: Dockerfile  collectstatic  manage.py  pyproject.toml
src/reviews_hub/reviews/: models.py  urls.py  views.py
src/reviews_hub/reviews/migrations/: 0001_initial.py  0002_alter_user_user_telegram.py
src/reviews_hub/reviews_hub/: asgi.py  settings.py  urls.py  wsgi.py
src/reviews_hub/templates/: index.html
